--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
       </nav>
     </div>
-    <img src="img/cover.jpg" alt="cover photo" />
+    <img class="img-titlu" src="img/cover.jpg" alt="cover photo" />
     <h1 class="titlu">Ciocolata artizanala premium</h1>
     <div class="body">
       <p>
